bynkc/tests/fixtures/negative/46_opaque_unsafe_outside/src/lib/main.bynk
commons lib

type Token = opaque String
